Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 </head>
 <body>
 Neil Dunn
-<p>Testing github editing</p>
-  
+
+<p>I am a software engineer &amp; manager at DRW Trading Group working on algorithmic trading systems and electronic trading tools.
+</p>
   
 </body>
 </html>
